fix bad merge
i dont know my git, so i messed up a merge to revert a commit adding translate function since im a purist

--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ html{
 	background-position: center center;
 }
 body{
-	top: 0 !important;
 	margin: 0;
 }
 header,nav{
@@ -36,32 +35,19 @@ h1{
 	font-weight: 400;
 	font-size: 24px;
 }
-nav>a,select.goog-te-combo{
+nav>a{
+	font-size: 24px;
 	color: #ffffff;
 	background-color: rgba(0,0,0,.25);
-	border: 1px solid rgba(255,255,255,.75);
-	text-decoration: none;
-}
-nav>a{
-	width: 192px;
-	max-width: 100vw;
 	padding: 8px;
 	margin: 8px 0;
-	font-size: 24px;
+	border: 1px solid rgba(255,255,255,.75);
+	text-decoration: none;
+	width: 192px;
+	max-width: 100vw;
 }
-select.goog-te-combo {
-	visibility: visible;
-	font-size: 16px;
-}
-nav>a:hover,nav>a:focus,select.goog-te-combo:hover,select.goog-te-combo:focus{
+nav>a:hover,nav>a:focus{
 	border-color: #ffffff;
 	background-color: rgba(0,0,0,.5);
 	outline: none;
 }
-#google_translate_element {
-	visibility: hidden;
-	height: 0;
-}
-.goog-tooltip,.goog-tooltip:hover,#goog-gt-tt,.goog-te-balloon-frame,.goog-logo-link,.goog-te-banner-frame{display: none !important;}
-.goog-text-highlight {background-color: transparent !important;border: none !important; box-shadow: none !important;}
-.goog-te-gadget{height: 28px !important;  overflow: hidden;}
